--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Jenessa White",
-  "name": "Jenessa White",
+  "name": "Jenessa White | Front End Developer",
   "icons": [
     {
       "src": "favicon.ico",
