--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "node-sass-chokidar": "1.3.0",
     "npm-run-all": "4.1.3",
     "react": "^16.3.2",
+    "react-anchor-link-smooth-scroll": "1.0.10",
     "react-dom": "^16.3.2",
+    "react-rotating-text": "1.2.1",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4"
   },
